--- a/code/profiles/search_profiles.html
+++ b/code/profiles/search_profiles.html
@@ -2,7 +2,7 @@
 <!--<head> -->
 
 	
-	<title>Bootstrap Case</title> 
+	<title>Perfiles</title> 
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -142,8 +142,6 @@ article {
 <!-- TOP BAR --------------------->
 <div id="top_bar" class="container">
 
-	div id=top_bar
-
 	<ul>
 		<a href="#">BICOYED Costa Rica</a>
 		<a href="#">Contacto +506 2253 5555, agomez@bicoyed.com</a>
@@ -154,7 +152,6 @@ article {
 <!-- HEADER AREA --------------------->
 <div id="header_area" class="container">	
 	<header>
-		div id="header_area"
 	   <h1>Sistema de Gestion</h1>
 	</header>
 </div>
@@ -163,10 +160,8 @@ article {
 <!-- MENU BAR  --------------------->
 <div id="menu_bar" class="container">
 	
-	div id="menu_bar"
-	
 	<ul >
-		<a href="#">Bienvenido, Usuario</a>
+		<a href="#">Bienvenido, admin</a>
 	</ul>
 
 </div>
@@ -179,8 +174,6 @@ article {
 	<!-- SIDENAV MENU ------ -->
 	<nav id="sidenav">
 	
-		nav id="sidenav"
-		
 		<ul>
 			<li><a href="#">Ayuda</a></li>
 			<li><a href="#">Acerca de</a></li>
