--- a/code/index/login.html
+++ b/code/index/login.html
@@ -176,7 +176,7 @@ article {
 						<td>Clave</td><td><input id="Password_Field" type="password"  runat="server" ng-init="inputVal=''" ng-model="Password_Input_Model"></td>
 					</tr>
 					<tr>
-						<td></td><td><button ng-click="DummyLogin()">Ingresar</button></td>
+						<td></td><td><button ng-click="LoginRequest()">Ingresar</button></td>
 					</tr>
 					
 				</table>	
