changed input fields and coverted some functions

--- a/code/cpanel/search_users.html
+++ b/code/cpanel/search_users.html
@@ -197,7 +197,7 @@ article {
 
 		  <div class="tab-content">
 			<div id="home" class="tab-pane fade in active">
-			  <h3>Busqueda por paciente</h3>
+			  <h3>Busqueda por usuario</h3>
 		  
 				<!-- controller for patient search -->
 				<div ng-controller="dbCtrl">
