--- a/code/profiles/create_profiles.html
+++ b/code/profiles/create_profiles.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 	<html ng-app="fetch">
 	<!--<head> -->
 
@@ -153,7 +153,8 @@
 		
 	
 		<ul >
-			<a href="#">Bienvenido, Usuario</a>
+                    <a href="#">Bienvenido, UserID_Tag </a>
+                    <button ng-click="Logout()">Salir</button>
 		</ul>
 
 	</div>
