--- a/code/profiles/edit_profiles.html
+++ b/code/profiles/edit_profiles.html
@@ -154,7 +154,8 @@
 	<div id="menu_bar" class="container">
 		
 		<ul >
-			<a href="#">Bienvenido, admin</a>
+                    <a href="#">Bienvenido, UserID_Tag </a>
+                    <button ng-click="Logout()">Salir</button>
 		</ul>
 
 	</div>
