--- a/code/cpanel/search_users.html
+++ b/code/cpanel/search_users.html
@@ -179,7 +179,7 @@ article {
 		<div class="panel panel-default">
 			<div class="panel-body" id="content_panel">
 		  <ul class="nav nav-tabs">
-			<li class="active"><a data-toggle="tab" href="#home">Pacientes</a></li>
+			<li class="active"><a data-toggle="tab" href="#home">Usuario</a></li>
 			<li><a data-toggle="tab" href="#menu2">Ayuda</a></li>
 		  </ul>
 
@@ -287,7 +287,8 @@ article {
 									<td>{{users.UserGroup}}</td>
 									<td>{{users.Status}}</td>
 									<td>
-										<a href="edit_users.html?Action=EditUser&ID={{users.UserID}}">Editar</a>
+										<!--<a href="edit_users.html?Action=EditUser&ID={{users.UserID}}">Editar</a>-->
+                                                                                <a href="eu.php?Action=EditUser&ID={{users.UserID}}">Editar</a>
 									</td>		
 
 								</tr>
