--- a/code/cpanel/create_users.html
+++ b/code/cpanel/create_users.html
@@ -175,8 +175,10 @@ echo $_SESSION['UserID'];
 		
 			
 			<ul>
-				<li><a href="#">Ayuda</a></li>
+                                <li><a href="../index/index.php">Indice</a></li>
+                                <li><a href="#">Ayuda</a></li>
 				<li><a href="#">Acerca de</a></li>
+                                
 			</ul>
 		</nav>
 		<!-- END OF SIDENAV MENU -->
