--- a/code/index/index.html
+++ b/code/index/index.html
@@ -3,7 +3,7 @@
 	<!--<head> -->
 
 		
-		<title>Login</title> 
+		<title>Indice</title> 
 		<meta charset="utf-8"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -169,7 +169,7 @@
 
 
                                 <ul>
-                                        <li><a href="#">Login</a></li>
+                                        <li><a href="#">Menu</a></li>
                                         <li><a href="#">Acceso</a></li>
                                 </ul>
                         </nav>
@@ -183,7 +183,7 @@
                                 <div class="panel panel-default">
                                         <div class="panel-body" id="content_panel">
                                   <ul class="nav nav-tabs">
-                                        <li class="active"><a data-toggle="tab" href="#main">Ingreso</a></li>
+                                        <li class="active"><a data-toggle="tab" href="#main">Menu</a></li>
                                         <li><a data-toggle="tab" href="#user">Usuario</a></li>
                                         <li><a data-toggle="tab" href="#patient">Expediente</a></li>
                                   </ul>
@@ -204,25 +204,24 @@
                                                         <tr>
                                                                         <th>Usuarios</th>
                                                                         <td>
-                                                                            UserSearchLink
-                                                                            <br>UserCreateLink
-                                                                            <br>FFDUserLink
+                                                                            <a href="../cpanel/su.php">Buscar</a>
+                                                                            <a href="../cpanel/cu.php">Crear</a>
                                                                         </td>
                                                         </tr>
                                                         <tr>
                                                                         <th>Pacientes</th>
                                                                         <td>
-                                                                            PatientSearchLink
-                                                                            <br>PatientCreateLink
-                                                                            <br>FFDPatientLink
+                                                                            <a href="../profiles/sp.php">Buscar</a>
+                                                                            <a href="../profiles/cp.php">Crear</a>
+                                                                            <a href="../profiles/ffd.php">Marcados para borrar</a>
                                                                         </td>
                                                         </tr>
                                                         <tr>
                                                                         <th>Empresas</th>
                                                                         <td>
-                                                                            CompanySearchLink
-                                                                            <br>CompanyCreateLink
-                                                                            <br>FFDCompanyLink
+                                                                            <a href="../profiles/sp.php">Buscar</a>
+                                                                            <a href="../profiles/cp.php">Crear</a>
+                                                                            <a href="../profiles/ffd.php">Marcados para borrar</a>
                                                                         </td>
                                                         </tr>
                                                         
