--- a/code/cpanel/edit_users.html
+++ b/code/cpanel/edit_users.html
@@ -168,9 +168,10 @@
 		<nav id="sidenav">
 					
 			<ul>
+                                <li><a href="../index/index.php">Indice</a></li>
 				<li><a href="#">Ayuda</a></li>
 				<li><a href="#">Acerca de</a></li>
-				<li><a href="search_profiles.html">Perfiles</a></li>
+				
 			</ul>
 		</nav>
 		<!-- END OF SIDENAV MENU -->
