--- a/code/cpanel/search_users.html
+++ b/code/cpanel/search_users.html
@@ -4,7 +4,7 @@
 
 
 	
-	<title>Perfiles</title> 
+	<title>Usuarios</title> 
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -165,6 +165,7 @@ article {
 	<nav id="sidenav">
 	
 		<ul>
+                        <li><a href="../index/index.php">Indice</a></li>
 			<li><a href="#">Ayuda</a></li>
 			<li><a href="#">Acerca de</a></li>
 		</ul>
@@ -224,7 +225,7 @@ article {
 
 							<tr>
 								<td>Empresa</td>
-								<td><select ng-model="CompanyID_Input_Model" ng-options="item as item.CompanyID for item in CompanyList"></select></td>														
+								<td><select ng-model="CompanyID_Input_Model" ng-options="item as item.CompanyID for item in CompanyList"></select></td>
 
 							</tr>						
 							
