adding multiple usergroups

--- a/code/cpanel/edit_users.html
+++ b/code/cpanel/edit_users.html
@@ -305,7 +305,7 @@
                                                         
                                                         <br>
                                                         <div ng-repeat="users in data">
-                                                            <a href="iug.php?Action=EditUser&ID={{users.UserID}}">Agregar empresa/permisos</a>
+                                                            <a href="iug.php?Action=EditUser&ID={{users.UserID}}&RowID={{users.RowID}}">Agregar empresa/permisos</a>
                                                         </div>
 							
 						</form>		
