--- a/code/cpanel/search_users.html
+++ b/code/cpanel/search_users.html
@@ -289,10 +289,11 @@ article {
 									<td>{{users.Status}}</td>
 									<td>
 										<!--<a href="edit_users.html?Action=EditUser&ID={{users.UserID}}">Editar</a>-->
-                                                                                <a href="eu.php?Action=EditUser&ID={{users.UserID}}">Editar</a>
+                                                                                <a href="eu.php?Action=EditUser&ID={{users.UserID}}&RowID={{users.RowID}}">Editar</a>
 									</td>		
 
 								</tr>
+
 							</tbody>
 						</table>
 
