flagging users for deletion

--- a/code/index/index.html
+++ b/code/index/index.html
@@ -206,6 +206,7 @@
                                                                         <td>
                                                                             <a href="../cpanel/su.php">Buscar</a>
                                                                             <a href="../cpanel/cu.php">Crear</a>
+                                                                            <a href="../cpanel/ffdu.php?Action=ListFFDUser&ID=-10">Marcados para borrar</a>
                                                                         </td>
                                                         </tr>
                                                         <tr>
@@ -213,7 +214,7 @@
                                                                         <td>
                                                                             <a href="../profiles/sp.php">Buscar</a>
                                                                             <a href="../profiles/cp.php">Crear</a>
-                                                                            <a href="../profiles/ffd.php">Marcados para borrar</a>
+                                                                            
                                                                         </td>
                                                         </tr>
                                                         <tr>
